--- a/more.html
+++ b/more.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" >
-  <title>Find</title>
+  <title>More</title>
 </head>
 <body>
 
@@ -41,6 +41,101 @@
       </div>
     </div><!-- .header__bottom// -->
   </header>
+
+  <main class="more">
+    <header class="more__header">
+      <div class="more-header__column">
+        <img src="images/avatar.jpg" alt="">
+        <div class="more-header__info">
+          <h3 class="more-header_title">JeonEunMi</h3>
+        </div>
+        <span class="more-header__subtitle">
+          dexter87@knou.ac.kr
+        </span>
+      </div>
+      <i class="far fa-comment-alt fa-2x"></i>
+    </header>
+
+    <section class="more__options">
+      <div class="more__option">
+        <i class="far fa-smile fa-2x"></i>
+        <span class="more__option-title">Emoticons</span>
+      </div>
+      <div class="more__option">
+        <i class="fas fa-palette fa-2x"></i>
+        <span class="more__option-title">Themes</span>
+      </div>
+      <div class="more__option">
+        <i class="fas fa-plus-circle fa-2x"></i>
+        <span class="more__option-title">Plus Friends</span>
+      </div>
+      <div class="more__option">
+        <i class="fas fa-user-circle fa-2x"></i>
+        <span class="more__option-title">Account</span>
+      </div>
+    </section><!-- .more__options// -->
+
+    <section class="more__plus--friends">
+      <header class="plus-friends__header">
+        <h2 class="plus-friends__title">Plus Friends</h2>
+        <span class="plus-friends__learn-more">
+          <i class="fas fa-info-circle"></i> Learn More
+        </span>
+      </header>
+
+      <div class="plus-friend__items">
+        <div class="plus-friends__item">
+          <i class="fas fa-utensils"></i>
+          <span class="plus-friends__item-title">Order</span>
+        </div>
+        <div class="plus-friends__item">
+          <i class="fas fa-store"></i>
+          <span class="plus-friends__item-title">Store</span>
+        </div>
+        <div class="plus-friends__item">
+          <i class="fas fa-tv"></i>
+          <span class="plus-friends__item-title">TV Channel/Radio</span>
+        </div>
+        <div class="plus-friends__item">
+          <i class="fas fa-pencil-alt"></i>
+          <span class="plus-friends__item-title">Creation</span>
+        </div>
+        <div class="plus-friends__item">
+          <i class="fas fa-graduation-cap"></i>
+          <span class="plus-friends__item-title">Education</span>
+        </div>
+        <div class="plus-friends__item">
+          <i class="fas fa-university"></i>
+          <span class="plus-friends__item-title">Politics/Society</span>
+        </div>
+        <div class="plus-friends__item">
+          <i class="fas fa-won-sign"></i>
+          <span class="plus-friends__item-title">Finance</span>
+        </div>
+        <div class="plus-friends__item">
+          <i class="fas fa-compact-disc"></i>
+          <span class="plus-friends__item-title">Movie/Music</span>
+        </div>
+      </div>
+    </section>
+
+    <secion class="more__options">
+      <div class="more__option">
+        <img src="images/kakaoStory.png" alt="" class="more__options-image">
+        <span class="more__options-title">Kakao Story</span>
+      </div>
+      <div class="more__option">
+        <img src="images/path.png" alt="" class="more__options-image">
+        <span class="more__options-title">Path</span>
+      </div>
+      <div class="more__option">
+        <img src="images/kakaoFriends.png" alt="" class="more__options-image">
+        <span class="more__options-title">Kakao friends</span>
+      </div>
+    </secion>
+
+  </main>
+
 
   <nav class="tab-bar">
     <a href="index.html" class="tab-bar__tab">
