--- a/chats.html
+++ b/chats.html
@@ -49,31 +49,37 @@
     </div><!-- .search-bar// -->
 
     <ul class="chats__list">
+
       <li class="chats__chat">
-        <div class="chat__content">
-          <img src="images/avatar.jpg" />
-          <div class="chat__preview">
-            <h3 class="chat__user">Lynn</h3>
-            <span class="chat__last-message">Hello! This is a test message.</span>
-          </div>
-        </div><!-- .chat__content// -->
-        <span class="chat__date-time">
-          15:55
-        </span>
+        <a href="chat.html">
+          <div class="chat__content">
+            <img src="images/avatar.jpg" />
+            <div class="chat__preview">
+              <h3 class="chat__user">Lynn</h3>
+              <span class="chat__last-message">Hello! This is a test message.</span>
+            </div>
+          </div><!-- .chat__content// -->
+          <span class="chat__date-time">
+            15:55
+          </span>
+        </a>
       </li>
 
       <li class="chats__chat">
-        <div class="chat__content">
-          <img src="images/avatar.jpg" />
-          <div class="chat__preview">
-            <h3 class="chat__user">KakaoTalk</h3>
-            <span class="chat__last-message">You logged in into KakaoTalk PC from the PC</span>
-          </div>
-        </div><!-- .chat__content// -->
-        <span class="chat__date-time">
-          Jul 29
-        </span>
+        <a href="chat.html">
+          <div class="chat__content">
+            <img src="images/avatar.jpg" />
+            <div class="chat__preview">
+              <h3 class="chat__user">KakaoTalk</h3>
+              <span class="chat__last-message">You logged in into KakaoTalk PC from the PC</span>
+            </div>
+          </div><!-- .chat__content// -->
+          <span class="chat__date-time">
+            Jul 29
+          </span>
+         </a> 
       </li>
+
     </ul>   
 
     <div class="chat-btn">
