chat + html link done

--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
 
       <div class="friends__section-rows">
         <div class="friends__section-row">
-          <img src="" alt="" />
-          <span class="friends__section-name">Nicolas</span>
+          <a href="profile.html">
+            <img src="" alt="" />
+            <span class="friends__section-name">Nicolas</span>
+          </a>
         </div><!-- .friends__section-row// -->
 
         <div class="friends__section-row">
@@ -83,7 +85,7 @@
             Life is short. So live your life.
           </span>
         </div><!-- .friends__section-row// -->
-      </div><!-- .friends__section-rows// -->
+      </div><!-- .friends__section-rowS// -->
       
     </section>
 
