--- a/profile.html
+++ b/profile.html
@@ -29,7 +29,9 @@
 
     <div class="header__bottom">
       <div class="header__column">
-        <i class="fa fa-times fa-lg"></i>
+        <a href="index.html">
+          <i class="fa fa-times fa-lg"></i>
+        </a>
       </div>
 
       <div class="header__column">
@@ -41,6 +43,36 @@
       </div>
     </div><!-- .header__bottom// -->
   </header>
+
+
+
+  <main class="profile">
+
+    <header class="profile__header">
+       <img src="images/avater.jpg" alt="">
+       <h3 class="profile__header-title">Nicolas</h3>
+    </header>
+    <input type="text" placeholder="dexter87@knou.ac.kr">
+
+    <div class="profile__actions">
+
+      <div class="profile_action">
+        <span class="profile__action-circle">
+          <i class="fas fa-comment-alt fa-2x"></i>
+        </span>
+        <span class="profile_action-title">My Chatroom</span>
+      </div><!-- action// -->
+
+      <div class="profile_action">
+        <span class="profile__action-circle">
+          <i class="fas fa-pencil-alt fa-2x"></i>
+        </span>
+        <span class="profile_action-title">Edit Profile</span>
+      </div><!-- action// -->
+
+    </div><!-- profile__actionS// -->
+
+  </main>
 
 </body>
 </html>
