--- a/chat.html
+++ b/chat.html
@@ -29,7 +29,9 @@
 
     <div class="header__bottom">
       <div class="header__column">
-        <i class="fa fa-chevron-left fa-lg"></i>
+        <a href="chats.html">
+          <i class="fa fa-chevron-left fa-lg"></i>
+        </a>
       </div>
 
       <div class="header__column">
@@ -65,7 +67,7 @@
       <span class="chat__message-time">19:35</span>
     </div>
   </main>  
-  
+
 
   <div class="type-message">
     <i class="fa fa-plus fa-2x"></i>
